--- a/webgl/index.html
+++ b/webgl/index.html
@@ -23,6 +23,8 @@
          loadScene();
          render();
 
+         alert("AO");
+
          function init() {
             // Motor de render
             renderer = new THREE.WebGLRenderer();
