--- a/webgl/index.html
+++ b/webgl/index.html
@@ -40,6 +40,34 @@
             camera = new THREE.PerspectiveCamera( 75, aspectRatio, 0.1, 100 );
             camera.position.set( 0.5, 2, 5 );
             camera.lookAt( new THREE.Vector3( 0,0,0 ) );
+
+            material = new THREE.MeshPhysicalMaterial({
+            color: 0xb2ffc8,
+            envMap: envTexture,
+            metalness: 0.25,
+            roughness: 0.1,
+            opacity: 1.0,
+            transparent: true,
+            transmission: 0.99,
+            clearcoat: 1.0,
+            clearcoatRoughness: 0.25
+         })
+
+            //Griglia
+            loader = new STLLoader()
+            loader.load(
+               'models/connect4/Griglia.stl',
+               function (geometry) {
+                  mesh = new THREE.Mesh(geometry, material)
+                  scene.add(mesh)
+               },
+               (xhr) => {
+                  console.log((xhr.loaded / xhr.total) * 100 + '% loaded')
+               },
+               (error) => {
+                  console.log(error)
+               }
+            )
          }
 
          function loadScene(){
