--- a/webgl/index.html
+++ b/webgl/index.html
@@ -23,7 +23,7 @@
          loadScene();
          render();
 
-         alert("AO");
+         alert("AO2");
 
          function init() {
             // Motor de render
