--- a/webgl/index.html
+++ b/webgl/index.html
@@ -16,6 +16,9 @@
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
       <script>
+
+         import { STLLoader } from 'three/examples/jsm/loaders/STLLoader'
+
          //Variables globales
          var renderer, scene, camera;
          
