--- a/webgl/index.html
+++ b/webgl/index.html
@@ -15,9 +15,18 @@
    <body>
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
+      <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "../build/three.module.js"
+				}
+			}
+		</script>
       <script>
 
-         import { STLLoader } from 'three/examples/jsm/loaders/STLLoader'
+         import { STLLoader } from './loaders/STLLoader'
 
          //Variables globales
          var renderer, scene, camera;
