--- a/webgl/index.html
+++ b/webgl/index.html
@@ -24,6 +24,7 @@
 				}
 			}
 		</script>
+      <script type="module" src="loaders/STLLoader.js"></script>
       <script>
 
          import { STLLoader } from './loaders/STLLoader'
