--- a/webgl/index.html
+++ b/webgl/index.html
@@ -15,19 +15,8 @@
    <body>
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
-      <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "./build/three.module.js"
-				}
-			}
-		</script>
-      <script type="module" src="loaders/STLLoader.js"></script>
+      <script src="loaders/STLLoader.js"></script>
       <script>
-
-         import { STLLoader } from './loaders/STLLoader'
 
          //Variables globales
          var renderer, scene, camera;
@@ -57,7 +46,7 @@
             material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
 
             //Griglia
-            loader = new STLLoader()
+            loader = new THREE.STLLoader();
             loader.load(
                'models/connect4/Griglia.stl',
                function (geometry) {
