--- a/webgl/index.html
+++ b/webgl/index.html
@@ -15,7 +15,7 @@
    <body>
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
-      <script type="module" src="loaders/STLLoader.js"></script>
+      <script type="module" src="./loaders/STLLoader.js"></script>
       <script>
 
          //Variables globales
