--- a/webgl/index.html
+++ b/webgl/index.html
@@ -15,9 +15,7 @@
    <body>
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
-      <script type="module" src="./loaders/STLLoader.js"></script>
-      <script type="module">
-         import { STLLoader } from 'loaders/STLLoader'
+      <script>
          //Variables globales
          var renderer, scene, camera;
          
@@ -46,20 +44,14 @@
             material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
 
             //Griglia
-            loader = new STLLoader();
-            loader.load(
-               'models/connect4/Griglia.stl',
-               function (geometry) {
-                  mesh = new THREE.Mesh(geometry, material)
-                  scene.add(mesh)
-               },
-               (xhr) => {
-                  console.log((xhr.loaded / xhr.total) * 100 + '% loaded')
-               },
-               (error) => {
-                  console.log(error)
-               }
-            )
+            var loader = new THREE.ObjectLoader();
+            loader.load( 'models/connect4/Griglia.json', 
+                        function (objeto){
+                           objeto.scale.set(0.8,0.8,0.8);
+                           objeto.position.y = -1;
+                           objeto.rotation.y = Math.PI/2;
+                           scene.add(objeto);
+                        });
          }
 
          function loadScene(){
