--- a/webgl/index.html
+++ b/webgl/index.html
@@ -15,6 +15,7 @@
    <body>
       <div id="container"><canvas width="840" height="853" style="width: 840px; height: 853px;"></canvas></div>
       <script src="lib/three.min_r96.js"></script>
+      <script src="loaders/GLTFLoader.js"></script>
       <script>
          //Variables globales
          var renderer, scene, camera;
@@ -23,7 +24,7 @@
          loadScene();
          render();
 
-         alert("AO2");
+         alert("AO3");
 
          function init() {
             // Motor de render
@@ -43,15 +44,28 @@
 
             material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
 
-            //Griglia
-            var loader = new THREE.JSONLoader();
-            loader.load( 'models/connect4/Griglia.json', 
-                        function (objeto){
-                           objeto.scale.set(0.8,0.8,0.8);
-                           objeto.position.y = -1;
-                           objeto.rotation.y = Math.PI/2;
-                           scene.add(objeto);
-                        });
+            const loader = new THREE.GTLFLoader();
+            loader.load(
+               // resource URL
+               'models/connect_4/scene.gltf',
+               // called when the resource is loaded
+               function ( gltf ) {
+                  scene.add( gltf.scene );
+                  gltf.animations; // Array<THREE.AnimationClip>
+                  gltf.scene; // THREE.Group
+                  gltf.scenes; // Array<THREE.Group>
+                  gltf.cameras; // Array<THREE.Camera>
+                  gltf.asset; // Object
+               },
+               // called while loading is progressing
+               function ( xhr ) {
+                  console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+               },
+               // called when loading has errors
+               function ( error ) {
+                  console.log( 'An error happened' );
+               }
+            );
          }
 
          function loadScene(){
